<resources>
    <string name="app_name">Футбольный мир</string>
    <string name="selectTeam">Выберите команду</string>
    <string name="next">Дальше</string>
    <string name="skillTeam">Мастерство</string>
    <string name="costTeam">Цена</string>
    <string name="chemp">Чемпионат</string>
    <string name="moneyTeam">Бюджет</string>
    <string name="nextRival">Следующий соперник:</string>
    <string name="rival">Соперник</string>
    <string name="rivals">Соперники</string>
    <string name="squad">Состав</string>
    <string name="training">Тренировки</string>
    <string name="send">Отправить</string>
    <string name="date">Дата</string>
    <string name="rezult_send">Результат/Отправка</string>
    <string name="vName">Менеджер, введите Ваше имя:</string>


    <string name="vorskla">Ворскла</string>
    <string name="shakhtar">Шахтер</string>
    <string name="dynamo">Динамо</string>
    <string name="veres">Верес</string>
    <string name="zarya">Зоря</string>
    <string name="karpaty">Карпаты</string>


    <string name="btnplayer1">GK С.Кирик</string>
    <string name="player1">GK Сергей Кирик</string>
    <string name="btnplayer2">LD/RD Р.Багдай</string>
    <string name="player2">LD/RD Роман Багдай</string>
    <string name="btnplayer3">LD/RD С.Хандерсон</string>
    <string name="player3">LD/RD Самуэль Хандерсон</string>
    <string name="btnplayer4">CD/CM М.Гусак</string>
    <string name="player4">CD/CM Мирослав Гусак</string>
    <string name="btnplayer5">CD/LD Д.Сенич</string>
    <string name="player5">CD/LD Джарен Сенич</string>
    <string name="btnplayer6">LM/RM Барригана</string>
    <string name="player6">LM/RM Барригана</string>
    <string name="btnplayer7">CM/CD В.Дорошенко</string>
    <string name="player7">CM/CD Валерий Дорошенко</string>
    <string name="btnplayer8">CM/CF Б.Цурчич</string>
    <string name="player8">CM/CF Божен Цурчич</string>
    <string name="btnplayer9">CM/LM Р.Сааведра</string>
    <string name="player9">CM/LM Рамиро Сааведра</string>
    <string name="btnplayer10">RM/RF А.Борик</string>
    <string name="player10">RM/RF Андрей Борик</string>
    <string name="btnplayer11">CF/LF А.МакАлинден</string>
    <string name="player11">CF/LF Арнольд МакАлинден</string>
    <string name="btnplayer12">GK Р.Сюмтер</string>
    <string name="player12">GK Ровенди Сюмтер</string>
    <string name="btnplayer13">LD/RD Д.Матильда</string>
    <string name="player13">LD/RD Дэррилл Матильда</string>
    <string name="btnplayer14">CD/CM Ф.Зиммерман</string>
    <string name="player14">CD/CM Фернандо Зиммерман</string>
    <string name="btnplayer15">RD/LD Р.Селестина</string>
    <string name="player15">RD/LD Ренсли Селестина</string>
    <string name="btnplayer16">RD/CD И.Рой</string>
    <string name="player16">RD/CD Илия Рой</string>
    <string name="btnplayer17">LM/LF Р.Мюнстер</string>
    <string name="player17">LM/LF Роберт ван Мюнстер</string>
    <string name="btnplayer18">CM/CF В.Пурье</string>
    <string name="player18">CM/CF Вендел Пурье</string>
    <string name="btnplayer19">CM/CD Й.Харрис</string>
    <string name="player19">CM/CD Йон Харрис</string>
    <string name="btnplayer20">CM/CF М.Шарма</string>
    <string name="player20">CM/CF Мигма Шарма</string>
    <string name="btnplayer21">RM/RF К.Христина</string>
    <string name="player21">RM/RF Квинтон Христина</string>
    <string name="btnplayer22">CF/CM А.Саричев</string>
    <string name="player22">CF/CM Александр Саричев</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
