<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_yong"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.sertox.football.Team.Yong"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/yongPNG"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/yong"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/yongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/yong"
        app:layout_constraintLeft_toRightOf="@+id/yongPNG"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer18"
        tools:text="@string/btnplayer18"
        style="@android:style/Widget.Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer14"
        app:layout_constraintLeft_toRightOf="@+id/btnplayer22"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer20"
        tools:text="@string/btnplayer20"
        style="@android:style/Widget.Button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer12"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer21"
        tools:text="@string/btnplayer21"
        style="@android:style/Widget.Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer19"
        app:layout_constraintLeft_toRightOf="@+id/btnplayer20"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer22"
        tools:text="@string/btnplayer22"
        android:layout_width="0dp"
        style="@android:style/Widget.Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer16"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer15"
        tools:text="@string/btnplayer15"
        android:layout_width="0dp"
        style="@android:style/Widget.Button"
        app:layout_constraintLeft_toRightOf="@+id/btnplayer17"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer18"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/skillTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/skillTeam"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/yongName"
        app:layout_constraintLeft_toRightOf="@+id/yongPNG"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/costTeam"
        tools:text="@string/costTeam"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/skillTeam"
        app:layout_constraintLeft_toRightOf="@+id/yongPNG"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skillTeamScore"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text=""
        tools:layout_editor_absoluteY="42dp"
        tools:layout_editor_absoluteX="265dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/costTeamScore"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text=""
        tools:layout_editor_absoluteY="59dp"
        tools:layout_editor_absoluteX="265dp" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer12"
        tools:text="@string/btnplayer12"
        android:layout_width="0dp"
        style="@android:style/Widget.Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/yongPNG"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer14"
        tools:text="@string/btnplayer14"
        android:layout_width="0dp"
        style="@android:style/Widget.Button"
        app:layout_constraintLeft_toRightOf="@+id/btnplayer16"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer21"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer16"
        tools:text="@string/btnplayer16"
        style="@android:style/Widget.Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer20"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btnplayer13"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/btnplayer13"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer17"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer17"
        tools:text="@string/btnplayer17"
        style="@android:style/Widget.Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnplayer22"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnplayer19"
        tools:text="@string/btnplayer19"
        style="@android:style/Widget.Button"
        app:layout_constraintLeft_toRightOf="@+id/btnplayer12"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnplayer12"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>
