<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dynamo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.sertox.football.Team.Dynamo"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/dynamo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:layout_constraintLeft_creator="1"
            tools:text="@string/dynamo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/chemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@+id/dynamo"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:text="@string/chemp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/skillTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@+id/chemp"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:text="@string/skillTeam"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/skillTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:text="1000"
            app:layout_constraintBaseline_toBaselineOf="@+id/skillTeam"
            app:layout_constraintLeft_toRightOf="@+id/skillTeam" />

        <TextView
            android:id="@+id/costTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skillTeam"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:text="@string/costTeam"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/costTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="800.000"
            app:layout_constraintBaseline_toBaselineOf="@+id/costTeam"
            app:layout_constraintLeft_toRightOf="@+id/costTeam" />

        <TextView
            android:id="@+id/moneyTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/costTeam"
            tools:text="@string/moneyTeam"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/moneyTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="9.8M"
            app:layout_constraintBaseline_toBaselineOf="@+id/moneyTeam"
            app:layout_constraintLeft_toRightOf="@+id/moneyTeam" />

        <TextView
            android:id="@+id/nextRival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@string/nextRival"
            app:layout_constraintTop_toBottomOf="@+id/moneyTeam" />

        <TextView
            android:id="@+id/nextRivalTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="Шахтер"
            app:layout_constraintBaseline_toBaselineOf="@+id/nextRival"
            app:layout_constraintLeft_toRightOf="@+id/nextRival" />

        <Button
            android:id="@+id/btnSend"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toRightOf="@+id/nextRivalTeam"
            app:layout_constraintTop_toBottomOf="@+id/moneyTeamScore"
            tools:text="@string/send" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSend"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="344dp"
            android:layout_height="500dp"
            android:layout_margin="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

